--- a/Programming/styles.css
+++ b/Programming/styles.css
@@ -2,160 +2,160 @@ h1 {
 text-align: center;
 }
 
+@media (min-width: 992px)
+.col-lg-4 {
+    width: 25.25%;
+}
+@media (min-width: 992px)
+.col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
+    float: left;
+}
+
+.row {
+    width: 100%;
+}
+
 * {
-  box-sizing: border-box;
+    box-sizing: border-box;
+    font-family: sans-serif;
+    font-size: 16;
+    font-weight: bold;
 }
 
-#section1{
-border: 2px solid black;
-font-size: 25px;
-float: right;
-background-color: seagreen;
-margin-right: 500px;
-padding-right: 50px;
+.center {
+    text-align: center;
+    padding: 1%;
+    column-count: 3;
+}
+
+section.games>h2 {
+    background-color: lightcoral;
+
+}
+
+section.movies>h2 {
+    background-color: lightgoldenrodyellow;
+}
+
+section.comics>h2 {
+    background-color: skyblue;
+}
+
+section>h2 {
+    float: right;
+    margin: 1px;
+    border-bottom: 1px solid black;
+    border-left: 1px solid black;
+    text-align: center;
+    font-size: 1.5em;
+    width: 25%;
+    font-weight: bold;
 }
 
 
-#section2{
-  border: 2px solid black;
-font-size: 25px;
-float: right;
-background-color: deepskyblue;
-margin-right: 500px;
-padding-right: 50px;
+
+.games {
+    border: 1px solid black;
+    background-color: rgb(156, 153, 153);
+    display: block;
+    height: 180px;
+    width: 600px;
+    float: left;
+   
 }
 
-#section3{
-border: 2px solid black;
-font-size: 25px;
-float: right;
-background-color:  midnightblue;
-margin-right: 500px;
-padding-right: 50px;
+.movies {
+    border: 1px solid black;
+    background-color: rgb(156, 153, 153);
+    display: block;
+    height: 180px;
+    width: 600px;
+    float: left;
+
+ 
+}
+
+.comics {
+    border: 1px solid black;
+    background-color: rgb(156, 153, 153);
+    display: block;
+    height: 180px;
+    width: 600px;
+    float: right;
+
 }
 
 
 
-#p1{
-border:  2px solid black;
-padding: 50px;
-margin-top: 10px;
-margin-right: 500px;
-padding-right: 500px;
-background-color: gold;
-font-size: 20px;
+
+.text1{
+  position: relative;
+margin: 10px;
 }
 
-#p2{
-border:  2px solid black;
-padding: 50px;
-margin-top: 10px;
-margin-right: 500px;
-padding-right: 500px;
-background-color: aquamarine;
-font-size: 20px;
+.text2{
+  position: relative;
+   margin: 10px;
 }
 
-#p3{
-border:  2px solid black;
-padding: 50px;
-margin-top: 10px;
-margin-right: 500px;
-padding-right: 500px;
-background-color: paleturquoise;
-font-size: 20px;
+.text3{
+  position: relative;
+   margin: 10px;
 }
 
+
+
+section.games>p {
+    padding: 20px 15px 20px 15px ;
+    display: inline-grid;
+    margin: 15px;
+
+
+}
+
+section.movies>p {
+    padding: 20px 15px 20px 15px;
+    display: inline-grid;
+    margin: 15px;
+    clear: right;
+}
+
+section.comics>p {
+    padding: 20px 15px 20px 15px ;
+    display: inline-grid;
+    margin: 15px;
+
+}
 
 /* Simple Responsive Framework. */
-.row1 {
+.row {
   width: 100%;
 }
 
-/********** Large devices only **********/
-@media (min-width: 1200px) {
-  .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
-    float: left;
-    border: 1px solid green;
-  }
-  .col-lg-1 {
-    width: 8.33%;
-  }
-  .col-lg-2 {
-    width: 16.66%;
-  }
-  .col-lg-3 {
-    width: 25%;
-  }
-  .col-lg-4 {
-    width: 33.33%;
-  }
-  .col-lg-5 {
-    width: 41.66%;
-  }
-  .col-lg-6 {
-    width: 50%;
-  }
-  .col-lg-7 {
-    width: 58.33%;
-  }
-  .col-lg-8 {
-    width: 66.66%;
-  }
-  .col-lg-9 {
-    width: 74.99%;
-  }
-  .col-lg-10 {
-    width: 83.33%;
-  }
-  .col-lg-11 {
-    width: 91.66%;
-  }
-  .col-lg-12 {
-    width: 100%;
-  }
+#container1{
+    margin-right: 15px;
+    margin-top: 15px;
+    margin-left: 5px;
+    margin-bottom: 15px;
+    
+    float:  left;
 }
 
-/********** Medium devices only **********/
-@media (min-width: 992px) and (max-width: 1199px) {
-  .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
+#container2{
+    margin-right: 15px;
+    margin-top: 15px;
+    margin-left: 15px;
+    margin-bottom: 15px;
     float: left;
-    border: 1px solid green;
-  }
-  .col-md-1 {
-    width: 8.33%;
-  }
-  .col-md-2 {
-    width: 16.66%;
-  }
-  .col-md-3 {
-    width: 25%;
-  }
-  .col-md-4 {
-    width: 33.33%;
-  }
-  .col-md-5 {
-    width: 41.66%;
-  }
-  .col-md-6 {
-    width: 50%;
-  }
-  .col-md-7 {
-    width: 58.33%;
-  }
-  .col-md-8 {
-    width: 66.66%;
-  }
-  .col-md-9 {
-    width: 74.99%;
-  }
-  .col-md-10 {
-    width: 83.33%;
-  }
-  .col-md-11 {
-    width: 91.66%;
-  }
-  .col-md-12 {
-    width: 100%;
-  }
+    clear: right;
 }
+
+#container3{
+     margin-right: 0px;
+    margin-top: 18px;
+    margin-left: 0px;
+    margin-bottom: 18px;
+   
+    float:  right;
+}
+
